--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,25 @@
   color: blue;
   font-family: sans-serif; 
   font-size: : 100px ;
+  background-color: orange;
 }
 .article2 {
   color: red;
   font-family: comic; 
   font-size: : 50px ;
+  background-color: black;
 }
 
 .article3 {
   color: green;
   font-family: times; 
   font-size: : 500px ;
+  background-color: pink;
 }
 
 .article4 {
   color: purple;
   font-family: arial; 
   font-size: : 200px ;
+  background-color: tan;
 }
